streamlined/style.css
/* ELEMENT STYLES */
a, article, aside, b, body, caption, center, div, em, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, img, label, li, menu, nav, object, ol, p, section, small, span, strike, strong, sub, sup, table, tbody, td, tfoot, th, thead, tr, tt, u, ul, var {
  background-color: rgb(250, 250, 250);
  font-family: 'Work Sans', sans-serif;
  font-size: 100%;
  line-height: 140%;
  margin: 0;
  padding: 0;
}

a {
  color: crimson;
  cursor: pointer;
  font-family: 'Cinzel Decorative', cursive;
  text-decoration: none;
  transition: color 0.25s ease-in-out;
}
a:hover {
  color: rgb(255, 102, 0);
}

footer {
  margin-top: 2rem;
}

hr {
  display: block;
  margin: 0 0 1rem 0;
  width: 100%;
}

img {
  display: inline-block;
  height: auto;
  max-width: 65%;
}

li {
  display: inline-block;
  list-style-type: none;
  margin-left: 40px;
  text-decoration: none;
}
footer li {
  margin: 0 40px;
}

p {
  display: block;
  width: 100%;
}

svg {
  fill: rgb(161, 161, 161);
  width: 25px;
  height: 25px;
  transition: fill 0.2s ease-in-out;
}
svg:hover {
  fill: rgb(204, 204, 204);
}

/* CLASS STYLES */
.button {
  background-color: crimson;
  border: 1px solid orange;
  color: #ffffff;
  display: block;
  margin: 0.75rem 0.75rem 0.75rem 0;
  padding: 0.5rem 1.5rem;
  text-decoration: none;
  text-transform: uppercase;
  transition: background-color 0.25s ease-in-out;
  box-shadow: -1px 1px 3px rgb(170, 170, 170);
}
.button:hover {
  background-color: rgb(255, 102, 0);
  color: #ffffff;
  box-shadow: -1px 1px 5px rgb(201, 201, 201);
}

.container {
  display: flex;
  margin: 0 1rem;
}

.emphatic {
  color: crimson;
  font-size: 1.25rem;
  text-transform: uppercase;
}

.floatLeft {
  float: left;
}

.floatRight {
  float: right;
}

.spaceBetween {
  justify-content: space-evenly;
}

/* ID STYLES */
#anthonyPhan {
  color: black;
  font-size: 3rem;
  margin-top: 1rem;
  text-shadow: -4px 3px 3px orange;
  transition: color 0.25 ease-in-out;
  -webkit-text-stroke: 2px crimson;
}
#anthonyPhan:hover {
  color: rgb(80, 21, 21);
  -webkit-text-stroke: 2px red;
}

#copyright {
  margin: 1.25rem 0 1rem 0;
  text-align: center;
}

/* MEDIA QUERIES   */
@media screen and (min-width: 900px) {
  img {
    max-width: 75%;
  }
}
@media screen and (min-width: 700px) and (max-width: 899px) {
  img {
    max-width: 70%;
  }
}
@media screen and (max-width: 469px) {
  img {
    max-width: 60%;
  }
}

@media screen and (max-width: 415px) {
  li {
    margin-left: 20px;
  }
}

@media screen and (max-width: 470px) {
  #anthonyPhan {
    line-height: 100%;
  }
}

@media screen and (max-width: 555px) and (min-width: 416px) {
  footer li {
    margin: 0 30px;
  }
}
@media screen and (max-width: 415px) {
  footer li {
    margin: 0 25px;
  }
}

